# AlloyEngine

./: .gitignore  buildscript.bat
AlloyEditor/: AlloyEditor.csproj  AlloyEditor.sln  Program.cs
AlloyRuntime/: AlloyRuntime.csproj  AssemblyInfo.cs  AudioClip.cs  Component.cs  EngineObject.cs  EngineResource.cs  Entity.cs  GameLoop.cs  Runtime.cs  Texture2D.cs  Window.cs  YamlSerializer.cs
AlloyRuntime/IO/: AssetEngine.cs  AssetLoader.cs  AssetPostProcessor.cs  CustomAssetSerializer.cs  IAssetPostProcessor.cs  ResourceSerializer.cs
AlloyRuntime/IO/AssetSerializers/: AudioClipSerializer.cs  Texture2DSerializer.cs
Core-C/: CMakeLists.txt
Core-C#/AlloyEngine3D/: AlloyEngine3D.csproj  AlloyEngine3D.sln
Core-C#/AlloyEngine3D/Rendering/: DrawCall.cs  DrawCallScheduler.cs  ShaderBase.cs  ShaderInfo.cs  ShaderLoader.cs
Core-C/Level Editor/: LevelEditorWindow.cpp  LevelEditorWindow.h
Core-C/Rendering/: SceneRenderer.cpp  SceneRenderer.h  ShaderInfo.h  ShaderLoader.h
Core-C/glad/src/: glad.c
Rendering-C/: CMakeLists.txt
Rendering-C#/AlloyEngine3D/: AlloyEngine3D.sln  AlloyRenderer.csproj  EngineObject.cs
Rendering-C#/AlloyEngine3D/Rendering/: DrawCall.cs  DrawCallScheduler.cs  ShaderInfo.cs  ShaderLoader.cs
Rendering-C#/AlloyEngine3D/Windowing/: WindowHandle.cs  WindowHandler.cs
Rendering-C/Rendering/: DrawCall.h  SceneRenderer.cpp  ShaderInfo.h  ShaderLoader.c  ShaderLoader.h
Rendering-C/Windowing/: WindowHandle.h  WindowHandler.c
Shared-C#/AlloyShared/: AlloyShared.csproj  AssetIdGenerator.cs  EngineObject.cs  FileReference.cs
(+15 files in other folders)
